--- a/MANAGE/src/Components/style.css
+++ b/MANAGE/src/Components/style.css
@@ -1,15 +1,12 @@
-.Login.Page {
+.loginPage {
     background: url('Images/TMT.jpg');
-    background: linear-gradient(rgba(11,11,11,0.5),rgba(10,10,10,0.5,),url('Images/TMT.jpg'));
+    background: linear-gradient(rgba(11, 11, 11, 0.5), rgba(10, 10, 10, 0.5), url('Images/TMT.jpg'));
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 120%;
-
-}
-
-.LoginForm {
-    background-color: rgba(1,32,93,0.6);
-    color:white;
-    color:azure;
-
-}
+  }
+  
+  .loginForm {
+    background-color: rgba(1, 32, 93, 0.6);
+    color: white;
+  }
